@@ -1,3 +1,7 @@
+2009-10-20	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* if_bge/if_bge.c, libbsdport/alldrv.c: Add local changes (untested).
+
 2009-09-12  Chris Johns <chrisj@rtems.org>
 
 	* links.am: Fixed the links so they work with absolute paths.
